# click-auto-editor

./: .gitattributes  .gitignore  0. limpieza_de_impurezas.py  1. juntar-audios.py  1. juntar_audios.py  1. verificacion_previa.py  10. inpunar_video.py  10.1. inpunar_video_V2.py  10.1. inpunar_video_V3.py  10.2. Inpunar_video.py  11. apelacion.py  11.1. apelacion_V2.py  11.1. apelacion_V3.py  12. mapear_playlists.py  13. filtrar_portadas.py  14. ordenar_playlists.py  15. genero_musical.py  2 cambiar_nombre_imagen.py  2. cantidad_de_archivos.py  2. ffmpeg_render.py  2youtube_copyright_check.txt  3 cambiar_nombre_imagen.py  3. subir_video_API.py  4. auto-effects.py  4. verificacion_humana.py  5. auto-effects.py  5. auto_edicion.py  5. auto_effects.py  5. ffmpeg_render.py  5. premier_pro.py  5. render.py  5. verificacion_humana.py  6. auto-premier.py  6. auto_premier.py  6. mover_videos_terminados.py  6. subir_video.py  6. subir_video_API.py  7. mover_videos_terminados.py  7. subir_video_coordenadas.py  7. subir_videos_selenium.py  (+47 more)
.atl/: .skill-registry.cache.json  skill-registry.md
Affter Effects/: asdfsdsdfasdf.aep  audio_to_keyframes.jsx  espectro_de_audio.jsx  imagen_movimiento.jsx  particules.jsx
Comentarios/: Comentario.txt
analisis_canal/: 0. preparar_entorno.py  1. extraer_datos.py  2. analizar_datos.py  README.md  config.py
coordenadas/: coordenadas-affter-effects.py
cpp/: CMakeLists.txt  compile_commands.json
cpp/src/: main.cpp
cpp/src/config/: render_config.cpp  render_config.hpp
cpp/src/effects/: chromatic_aberration.cu  color_bleeding.cu  color_grading.cu  cover_overlay.cu  cover_overlay.hpp  horizontal_wobble.cu  noise_grain.cu  position_jitter.cu  scanlines.cu  tracking_errors.cu  vhs_effect_chain.cu  vhs_effect_chain.hpp  vhs_overlay_blend.cu  vhs_transition.cu  vhs_transition.hpp
cpp/src/pipeline/: async_encode_queue.hpp  cover_pipeline.cpp  cover_pipeline.hpp  cuda_frame_buffer.cpp  cuda_frame_buffer.hpp  ffmpeg_decoder.cpp  ffmpeg_decoder.hpp  ffmpeg_encoder.cpp  ffmpeg_encoder.hpp  video_pipeline.cpp  video_pipeline.hpp
cpp/src/utils/: cancel_flag.cpp  cancel_flag.hpp  color_conversion.cu  color_conversion.hpp  cuda_utils.cu  cuda_utils.hpp  image_loader.cpp  image_loader.hpp  npp_wrappers.cpp  npp_wrappers.hpp  yuv_conversion.cu  yuv_conversion.hpp
data/: apelacion_claims_queue.json  apelar_claims_checkpoint.txt  apelar_claims_queue.json  deathgrind_tracklist_cache.json  escaneo_hostile_media_matches.txt  escaneo_lista_sello_queue.json  (+8 more)
(+60 files in other folders)
